--- a/Website_BuyFood/Views/Shared/_Layout.cshtml
+++ b/Website_BuyFood/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Website_BuyFood.Common;
+@using Website_BuyFood.Models;
+@model Website_BuyFood.Models.TaiKhoan
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>FastFood King</title>
@@ -55,11 +58,24 @@
                     </div>
                     <div class="col-xl-5 col-md-7 top-social-agile text-md-right text-center pr-sm-0 mt-md-0 mt-2">
                         <div class="row middle-flex">
-                            <div class="col-lg-5 col-4 top-w3layouts p-md-0 text-right">
+                            <div id="DangNhap" class="col-lg-5 col-4 top-w3layouts p-md-0 text-right">
+                                @{
+                                    var session = (UserLogin)Session[Website_BuyFood.Common.CommonConstants.USER_SESSION];
+                                }
                                 <!-- login -->
-                                <div class="DangNhap btn login-button-2 text-uppercase text-wh">
-                                    <span class="fa fa-sign-in mr-2"></span>Đăng nhập
-                                </div>
+                                @if (session == null)
+                                {
+                                    <div class="DangNhap btn login-button-2 text-uppercase text-wh">
+                                        <span class="fa fa-sign-in mr-2"></span>Đăng nhập
+                                    </div>
+                                }
+                                else
+                                {     
+                                    <div class="text-wh">
+                                        <a href="#">Xin chào: @session.TenDangNhap</a>
+                                    </div>                                  
+                                }
+
                                 <!-- //login -->
                             </div>
                             <div class="col-lg-7 col-8 social-grid-w3">
@@ -122,7 +138,7 @@
                                 <a href="#pages">Khác <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-3" />
                                 <ul>
-                                    @RenderSection("Them",required:false)                                 
+                                    @RenderSection("Them", required: false)
                                     <li><a class="drop-text DangNhap" href="#">Đăng nhập</a></li>
                                     <li><a class="drop-text DangKy" href="#">Đăng ký</a></li>
                                 </ul>
@@ -140,19 +156,19 @@
     <!-- đăng nhập -->
     <div class="login p-4 mx-auto HienDangNhap">
         <h5 class="text-center mb-4">CHÀO MỪNG TRỞ LẠI</h5>
-        <form action="#" method="post">
+        <form>
             <div class="Close-DN">
                 <a><span class="fa fa-times"></span></a>
             </div>
             <div class="form-group">
                 <label>Tên đăng nhập:</label>
-                <input type="text" class="form-control" name="name" placeholder="" required="">
+                <input type="text" class="form-control" id="TenDangNhap" placeholder="" required="">
             </div>
             <div class="form-group">
                 <label class="mb-2">Mật khẩu:</label>
-                <input type="password" class="form-control" name="password" placeholder="" required="">
+                <input type="password" class="form-control" id="MatKhau" placeholder="" required="">
             </div>
-            <button type="submit" class="btn submit mb-4">Đăng nhập</button>
+            <div id="btn-DangNhap" class="btn submit mb-4">Đăng nhập</div>
             <p class="forgot-w3ls text-center mb-3">
                 <a href="#" class="text-da">Quên mật khẩu?</a>
             </p>
@@ -172,23 +188,27 @@
             </div>
             <div class="form-group">
                 <label>Tên của bạn:</label>
-                <input type="text" class="form-control" name="name" placeholder="" required="">
+                <input type="text" class="form-control" id="HoTen" placeholder="" required="">
             </div>
             <div class="form-group">
-                <label>Email:</label>
-                <input type="email" class="form-control" name="email" placeholder="" required="">
+                <label>SDT:</label>
+                <input type="text" class="form-control" id="sdt" placeholder="" required="">
+            </div>
+            <div class="form-group">
+                <label>Tên đăng nhập:</label>
+                <input type="text" class="form-control" id="TenDangNhapDK" placeholder="" required="">
             </div>
             <div class="form-group">
                 <label class="mb-2">Mật khẩu:</label>
-                <input type="password" class="form-control" name="password" id="password1" placeholder=""
+                <input type="password" class="form-control" id="MatKhauDK1"  placeholder=""
                        required="">
             </div>
             <div class="form-group">
                 <label>Nhập lại mật khẩu:</label>
-                <input type="password" class="form-control" name="password" id="password2" placeholder=""
+                <input type="password" class="form-control" id="MatKhauDK2"placeholder=""
                        required="">
             </div>
-            <button type="submit" class="btn submit mb-4">Đăng ký</button>
+            <div id="btn-DangKy" class="btn submit mb-4">Đăng ký</div>
             <p class="text-center">
                 <a href="#" class="text-da">Click vào đăng ký có nghĩa là bạn đã đồng ý với điều khoản của chúng tôi.</a>
             </p>
@@ -301,7 +321,9 @@
     <!-- các file script -->
     <script src="/Content/js/jquery.js"></script>
     <script src="/Content/js/javascript.js"></script>
+    <script src="/Scripts/mustache.min.js"></script>
+    <script src="/Scripts/Ajax.js"></script>
     <!-- hết các file script -->
 </body>
-
+    
 </html>
